--- a/app.yaml
+++ b/app.yaml
@@ -9,3 +9,5 @@ readiness_check:
 resources:
   cpu: 2
   memory_gb: 2.0
+beta_settings:
+  cloud_sql_instances: dart-ci:us-central1:dart-results-db=tcp:7006
